[package]
name    = "bevy_eqchanged"
version = "0.1.0"
edition = "2024"

[features]
default = [ "intmap" ]
intmap  = [ "dep:intmap" ]

[lints.rust]
unused_parens = "allow"


[dependencies.bevy_ecs]
version          = "0.16"
default-features = false

[dev-dependencies.bevy_app]
version          = "0.16"
default-features = false

[dependencies.intmap]
version          = "3.1"
default-features = false
optional         = true
