[package]
name        = "bevy_eqchanged"
version     = "0.1.0"
description = "A simple library for Bevy to detect true changes to components."
authors     = [ "Totobird Creations <https://github.com/Totobird-Creations>" ]
edition     = "2024"

license    = "MIT"
readme     = "README.md"
repository = "https://github.com/Totobird-Creations/bevy_eqchanged"
keywords   = [ "bevy", "bevyengine", "game", "change-detection" ]
categories = [ "game-development", "game-engines" ]

[features]
default = [ "intmap" ]
intmap  = [ "dep:intmap" ]

[lints.rust]
unused_parens = "allow"
missing_docs  = "deny"


[dependencies.bevy_ecs]
version          = "0.16"
default-features = false

[dev-dependencies.bevy_app]
version          = "0.16"
default-features = false

[dependencies.intmap]
version          = "3.1"
default-features = false
optional         = true
